[tool.poetry]
name = "bio-image-unet"
packages = [
    { include = "biu" }
]
version = "0.6.0"
description = "Implementations of U-Net and Siam U-Net for biological image segmentation"
authors = ["Daniel Haertter <dani.hae@posteo.de>", "Yuxi Long <longyuxi@live.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
albumentations = "^1.3"
tifffile = "*"
tqdm = "^4.61"
numpy = "^1.20"
scikit-image = "^0.18"
packaging = "*"
torch= "2.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
